# pytorch-sidu

./: .gitignore  LICENSE.md  README.md  mkdocs.yml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-publish.yml
docs/: index.md  reference.md
pytorch_sidu/: __init__.py  sidu.py
pytorch_sidu/utils/: utils.py
sidu/: __init__.py
tests/: sidu_test.py
