[metadata]
name = pytorch-sidu
version = 0.0.0
author = Marco Parola
author_email = marcoparola96@gmail.com
description = SIDU Class Activation Map methods implemented in Pytorch.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MarcoParola/pytorch-sidu
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Development Status :: 4 - Beta

[options]
packages = find:
python_requires = >=3.6